bitfields/tests/compile_error_cases/errors/bitfield_non_named_fields.rs
use bitfields::bitfield;

#[bitfield(u8)]
pub struct TupleStruct(u8);

fn main() {}