bitfields/tests/compile_error_cases/errors/bitfield_non_named_fields.stderr
error: Non-named fields are not supported.
 --> tests/compile_error_cases/errors/bitfield_non_named_fields.rs:4:1
  |
4 | pub struct TupleStruct(u8);
  | ^^^^^^^^^^^^^^^^^^^^^^^^^^^
